# bioassert

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md
.claude-plugin/: marketplace.json  plugin.json
.github/scripts/: update-homebrew-formula.sh
.github/workflows/: cd.yml  ci.yml  docker.yml  release-binaries.yml  release-plz.yml
crates/bioassert-core/: CHANGELOG.md  Cargo.toml
crates/bioassert-delimited/: CHANGELOG.md  Cargo.toml
crates/bioassert-delimited/src/: functions.rs  lib.rs
crates/bioassert-delimited/src/cell/: executor.rs
crates/bioassert-delimited/src/column_count/: executor.rs
crates/bioassert-delimited/src/delimited/cell/: executor.rs  functions.rs
crates/bioassert-delimited/src/delimited/column_count/: executor.rs  functions.rs
crates/bioassert-delimited/src/delimited/line_count/: executor.rs  functions.rs
crates/bioassert-delimited/src/line_count/: executor.rs
crates/bioassert-engine/: CHANGELOG.md  Cargo.toml
crates/bioassert-engine/src/: assertion.rs  cli.pest  executor.rs  lib.rs  parser.rs  report.rs
crates/bioassert-file/: CHANGELOG.md  Cargo.toml
crates/bioassert-file/src/: lib.rs
crates/bioassert-file/src/empty/: functions.rs
crates/bioassert-file/src/exists/: executor.rs
crates/bioassert-file/src/file/: mod.rs
crates/bioassert-file/src/file/empty/: executor.rs
crates/bioassert-file/src/file/exists/: executor.rs  functions.rs
crates/bioassert-file/src/file/lines/: executor.rs  functions.rs
crates/bioassert-file/src/file/size/: executor.rs
crates/bioassert-file/src/size/: executor.rs  functions.rs
docs/: implementation-plan.md  spec.md
examples/: aligned_bam.assert  file_checks.assert  gen_sample_bam.rs
skills/bioassert/: SKILL.md
specs/: bam.md  conditional-assertions.md  fasta.md  generate.md  negated-comparators.md  resource-types.md  suggest.md
src/: cli.pest  cli.rs  engine.rs  errors.rs  executor.rs  exit.rs  file_error.rs  lib.rs  main.rs  model.rs  parse.rs  parser.rs  registry.rs  report.rs
src/assertions/: comparator.rs  comparator_errors.rs  errors.rs  metrics.rs  metrics_error.rs  mod.rs  values.rs  values_error.rs
src/bam/: assertions.rs  functions.rs  metrics.rs  mod.rs  read_count.rs
src/bam/count/: mod.rs  (+1 more)
src/common/: file.rs
src/comparisons/: comparator.rs  errors.rs
src/core/: assertion_request.rs  errors.rs  executor.rs  file_error.rs  mod.rs  strings.rs
src/delimited/: functions.rs  mod.rs
src/engine/: assertion.rs  assertions.pest  executor.rs  mod.rs  parser.rs  report.rs
src/executor/: mod.rs
src/fasta/: functions.rs  mod.rs
src/file/: mod.rs
src/files/: delimited.rs  empty.rs  exists.rs  lines.rs  mod.rs  size.rs
src/metrics/: delimited_cell.rs  delimited_column_count.rs  delimited_line_count.rs  file_empty.rs  file_exists.rs  file_lines.rs  file_size.rs  mod.rs
src/providers/: bam.rs  fasta.rs  fastq.rs  generic.rs  mod.rs  vcf.rs
src/suggest/: mod.rs  orchestrator.rs  provider.rs  suggestion.rs
src/text/: mod.rs
src/values/: mod.rs  value.rs
tests/: assert_subcommand_test.rs  assertions.txt  bam_subcommand_test.rs  cli.rs  cli_flags_test.rs  conditional_subcommand_test.rs  example.psv  example.tsv  fasta_subcommand_test.rs  file_compression_test.rs  integration_test.rs  logging_test.rs  negated_subcommand_test.rs  report_test.rs  resource_subcommand_test.rs  run_subcommand_test.rs  suggest_subcommand_test.rs
tests/data/: assertions.txt  bam_assertions.txt  clean_log.txt  compression_assertions.txt  conditional_assertions.txt  conditional_error.txt  failing_assertions.txt  fasta_assertions.txt  invalid_metric.txt  junctions.tsv  negated_comparators.txt  plain.txt.bz2  plain.txt.xz  plain.txt.zst  resource_types.txt  sample.bam  sample.fasta
tests/snapshots/: bam_subcommand_test__run_bam_passing_stdout.snap  conditional_subcommand_test__run_conditional_stdout.snap  fasta_subcommand_test__run_fasta_passing_stdout.snap  file_compression_test__run_compression_stdout.snap  integration_test__run_all_passing_stdout.snap  integration_test__run_error_stderr.snap  integration_test__run_fail_stdout.snap  logging_test__assert_subcommand_log.snap  logging_test__explicit_log_file.snap  (+14 more)
(+106 files in other folders)
