[workspace]
members = [
    ".",
    "crates/bioassert-core",
    "crates/bioassert-file",
    "crates/bioassert-delimited",
    "crates/bioassert-engine",
]
resolver = "2"

[package]
name = "bioassert"
version = "0.1.0"
edition = "2024"

[dependencies]
bioassert-engine = { path = "crates/bioassert-engine" }
clap = { version = "4.6.1", features = ["derive"] }

[dev-dependencies]
insta = "1.48.0"
tempfile = "3"
