[workspace]

[package]
name = "bioassert"
version = "1.4.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/peterkneale/bioassert"
description = "CLI tool for asserting properties of files in bioinformatics pipelines"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
regex = "1"
pest = "2.8.6"
pest_derive = "2.8.6"
noodles = { version = "0.111", features = ["bam", "sam", "fasta"] }

[dev-dependencies]
insta = "1.48.0"
tempfile = "3"
