[package]
name = "bioassert-delimited"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Delimited file (CSV/TSV) metric assertions for bioassert"

[dependencies]
bioassert-core = { path = "../bioassert-core", version = "0.1.0" }

[dev-dependencies]
tempfile = "3"
