[package]
name = "bioassert-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Execution engine for bioassert assertion pipelines"

[dependencies]
bioassert-core = { path = "../bioassert-core", version = "0.1.1" }
bioassert-file = { path = "../bioassert-file", version = "0.1.1" }
bioassert-delimited = { path = "../bioassert-delimited", version = "0.1.1" }
pest = "2.8.6"
pest_derive = "2.8.6"
