[package]
name = "bioassert-file"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "File metric assertions for bioassert"

[dependencies]
bioassert-core = { path = "../bioassert-core", version = "0.1.1" }

[dev-dependencies]
tempfile = "3"
