[package]
name = "bioassert-file"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "File metric assertions for bioassert"

[dependencies]
bioassert-core = { path = "../bioassert-core", version = "1.1.0" }

[dev-dependencies]
tempfile = "3"
